2009-07-07  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2009-01-28  Jb Evain  <jbevain@novell.com>

	* CallBaseMethodsOnISerializableTypesRule.cs:
		in InheritsFromISerializableImplementation: handle types
		with a null BaseType.

2008-12-13  Jesse Jones  <jesjones@mindspring.com> 

	* UseCorrectSignatureForSerializationMethodsRule.cs,
	DeserializeOptionalFieldRule.cs: Fix 
	AnalyzeModule so that it activates the rule properly when 
	multiple assemblies or modules are being checked.

2008-12-06  Sebastien Pouliot  <sebastien@ximian.com>

	* DeserializeOptionalFieldRule.cs: Use HasFields, HasMethods and
	HasCustomAttributes
	* ImplementISerializableCorrectlyRule.cs: Use HasFields and
	HasParameters
	* MarkAllNonSerializableFieldsRule.cs: Use HasFields
	* UseCorrectSignatureForSerializationMethodsRule.cs: Use 
	HasCustomAttributes

2008-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* DeserializeOptionalFieldRule.cs: Enable the rule only when
	[OptionalField] is used/referenced inside a module (quite rare).
	* UseCorrectSignatureForSerializationMethodsRule.cs: Enabled the
	rule only when one of the On[Des|S]erializ[ed|ing]Attribute type
	is referenced in the module (quite rare).

2008-11-07  Sebastien Pouliot  <sebastien@ximian.com>

	* MarkEnumerationsAsSerializableRule.cs: New. Rule to suggest to
	mark all enumerations as serializable (since they are) to improve 
	source code readability.
	* Makefile.am: Add rule and tests to the build.

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Serialization.mdp:
	* Gendarme.Rules.Serialization.csproj: Activate makefile integration for
	all the rules projects. Remove the old mdp files as they are no
	longer needed.

2008-10-21  Sebastien Pouliot  <sebastien@ximian.com>

	* CallBaseMethodsOnISerializableTypesRule.cs: Avoid specialization
	of CheckCallingBaseMethod parameters (self-test).
