@@ -1,3 +1,7 @@
+2009-08-19  Jesse Jones  <jesjones@mindspring.com>
+
+	* DeserializeOptionalFieldRule.cs: Edited the rule description.
+
 2009-07-07  Jesse Jones  <jesjones@mindspring.com>
 
 	* *Rule.cs: Edited most of the rule descriptions.
